# mfgtools

./: .gitignore  .gitmodules  CMakeLists.txt
libuuu/: CMakeLists.txt  gitversion.h.in
uuu/: CMakeLists.txt
