set(LIBUUU_HEADERS
		backfile.h
		buffer.h
		cmd.h
		config.h
		fastboot.h
		fat.h
		ffu_format.h
		hidreport.h
		http.h
		libcomm.h
		liberror.h
		libuuu.h
		rominfo.h
		sdp.h
		sdps.h
		sparse.h
		sparse_format.h
		tar.h
		trans.h
		zip.h
		)
set(LIBUUU_SOURCES
		buffer.cpp
		cmd.cpp
		config.cpp
		error.cpp
		fastboot.cpp
		fat.cpp
		hidreport.cpp
		http.cpp
		notify.cpp
		rominfo.cpp
		sdp.cpp
		sdps.cpp
		sparse.cpp
		tar.cpp
		trans.cpp
		usbhotplug.cpp
		version.cpp
		zip.cpp
		)

configure_file(gitversion.h.in "${CMAKE_CURRENT_BINARY_DIR}/gitversion.h" @ONLY)

if(ENABLE_OPENSSL)
	find_package(OpenSSL)
endif()
find_package(Threads)

add_library(libuuu ${LIBUUU_HEADERS} ${LIBUUU_SOURCES})
target_compile_features(libuuu PUBLIC cxx_std_17)
target_compile_definitions(libuuu
		PUBLIC
		$<$<CXX_COMPILER_ID:MSVC>:_HAS_STD_BYTE=0>
		$<$<BOOL:${OPENSSL_FOUND}>:UUUSSL>
		)
target_include_directories(libuuu
		PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
		$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
		${ZLIB_INCLUDE_DIRS}
		${BZIP2_INCLUDE_DIRS}
		${LIBZIP_INCLUDE_DIRS}
		${LIBUSB_INCLUDE_DIRS}
		$<$<BOOL:${OPENSSL_FOUND}>:${OPENSSL_LIBRARIES}>
		)
target_link_libraries(libuuu
		PUBLIC
		${ZLIB_LIBRARIES}
		${BZIP2_LIBRARIES}
		${LIBZIP_LIBRARIES}
		${LIBUSB_LIBRARIES}
		$<$<BOOL:${OPENSSL_FOUND}>:${OPENSSL_INCLUDE_DIR}>
		)
